@@ -3,6 +3,7 @@
 S3method(logml,bridge)
 S3method(logml,bridge_list)
 S3method(post_prob,bridge)
+S3method(post_prob,bridge_list)
 S3method(post_prob,default)
 S3method(print,bridge)
 S3method(print,bridge_list)
